--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
-h1 {
+ .Title {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: rgb(255, 72, 0);
   background-color: rgb(94, 131, 187);
+}
+
+.Picture {
+  height: 550px;
+  width: auto;
 }
 
 .Menu {
@@ -9,13 +14,10 @@ h1 {
   text-decoration: none;
 }
 
-.container {
-  display: flex;
-	  align-items: center;
-	  justify-content: center;
-	  border: 2px solid blue;
-	  height: 200px;
-}
+.Oyakodon .Picture {
+  rotate: 90deg;
+} 
+
 
 
 /* 
