--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
  .Title {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: serif;
   color: rgb(255, 72, 0);
   background-color: rgb(94, 131, 187);
 }
@@ -21,7 +21,7 @@
 .Description,
 .Ingredients,
 .Directions {
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: cursive;
   font-size: 20px;
 }
 
