--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
+ body {
+  width: 600px;
+  font-family: Arial, Helvetica, sans-serif;
+ }
+
  .Title {
-  font-family: serif;
+  font-family: Arial, Helvetica, sans-serif;
   color: rgb(255, 72, 0);
   background-color: rgb(94, 131, 187);
 }
@@ -23,7 +28,7 @@
 .Description,
 .Ingredients,
 .Directions {
-  font-family: cursive;
+  font-family: 
   font-size: 20px;
 }
 
